More precise "entities around"